# cpp-cross-platform

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  test_cpp.cpp
src/app/: CMakeLists.txt  test_cpp.cpp
src/auto_decltype/: auto_decltype.cpp
src/coroutines/: CMakeLists.txt  coroutines.cpp
src/dynamic_library/: CMakeLists.txt  singleton_container.cpp  singleton_container.h
src/dynamic_library2/: math.h
src/file_handler/: CMakeLists.txt  file_handler.cpp
src/lambda/: CMakeLists.txt  lambda.cpp
src/linking_libraries_app/: CMakeLists.txt
src/null_ptr/: null_ptr.cpp
src/observer/: CMakeLists.txt  observer.cpp
src/optional/: CMakeLists.txt  optional.cpp
src/override/: CMakeLists.txt  override.cpp
src/quiz/: quiz.cpp
src/range_based_loops/: range_based_loops.cpp
src/smart_pointers/: CMakeLists.txt  smart_pointers.cpp
src/static_assertion/: CMakeLists.txt  static_assertion.cpp
src/static_library/: CMakeLists.txt  utilities.cpp  utilities.h
src/structured_bindings/: CMakeLists.txt  structured_bindings.cpp
src/threads/: CMakeLists.txt  threads.cpp
src/uniform_initialization/: uniform_initialization.cpp
src/variadic_templates/: CMakeLists.txt  variadic_templates.cpp
